# horcrux

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  CODE_CLEANUP_REPORT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.cli  ENHANCEMENTS_FINAL_SUMMARY.md  ENHANCEMENTS_SESSION_SUMMARY.md  FEATURES.md  FINAL_STATUS.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_PLAN.md  LICENSE  MISSING_FEATURES.md  OIDC_FIX_SUMMARY.md  PROGRESS_SUMMARY.md  PROJECT_STATISTICS.md  PROXMOX_COMPARISON.md  QUICKSTART.md  README.md  README.md.old  REMAINING_WORK.md  ROADMAP.md  SESSION_COMPLETE.md  SESSION_COMPLETE_2025-10-12.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-10-11.md  SESSION_SUMMARY_2025-10-12.md  STATUS.md  TECHNICAL_STATUS.md  TEST_STATUS.md  TROUBLESHOOTING.md  USER_MANUAL.md  VALIDATION_SESSION_SUMMARY.md  docker-compose.yml  install.sh  (+5 more)
deploy/: config.toml.example  (+2 more)
horcrux-api/: Cargo.toml  config.example.toml
horcrux-api/benches/: api_benchmarks.rs  performance.rs
horcrux-api/horcrux-ui/: Cargo.toml  index.html
horcrux-api/horcrux-ui/src/: api.rs  lib.rs  main.rs  utils.rs  websocket.rs
horcrux-api/horcrux-ui/src/components/: mod.rs
horcrux-api/horcrux-ui/src/pages/: alerts.rs  clone_list.rs  console.rs  container_list.rs  dashboard.rs  gpu.rs  kubernetes.rs  login.rs  mod.rs  network.rs  replication_list.rs  snapshot_list.rs  storage.rs  vm_create.rs  vm_list.rs
horcrux-api/horcrux-ui/src/pages/audit/: audit_log.rs  compliance_reports.rs  forensics.rs  mod.rs  security_events.rs
horcrux-api/horcrux-ui/src/pages/auth/: api_keys.rs  mfa.rs  mod.rs  roles.rs  sessions.rs  users.rs
horcrux-api/horcrux-ui/style/: main.css
horcrux-api/src/: config.rs  encryption.rs  error.rs  gpu.rs  health.rs  lib.rs  logging.rs  main.rs  metrics_collector.rs  openapi.rs  prometheus.rs  secrets.rs  shutdown.rs  state.rs  tls.rs  validation.rs  webhooks.rs  websocket.rs
horcrux-api/src/alerts/: mod.rs  notifications.rs  rules.rs
horcrux-api/src/audit/: database.rs  middleware.rs  mod.rs  rotation.rs
horcrux-api/src/auth/: ldap.rs  mod.rs  oidc.rs  pam.rs  password.rs  rbac.rs  session.rs  twofa.rs
horcrux-api/src/backup/: mod.rs  parallel.rs  providers.rs  retention.rs  scheduler.rs
horcrux-api/src/cloudinit/: mod.rs
horcrux-api/src/cluster/: affinity.rs  arch.rs  balancer.rs  corosync.rs  membership.rs  migration.rs  mod.rs  node.rs  state_sync.rs
horcrux-api/src/console/: mod.rs  novnc.rs  serial.rs  spice.rs  vnc.rs  websocket.rs
horcrux-api/src/container/: docker.rs  incus.rs  lxc.rs  lxd.rs  mod.rs  podman.rs
horcrux-api/src/db/: migrations.rs  mod.rs
horcrux-api/src/firewall/: mod.rs  nftables.rs  security_groups.rs
horcrux-api/src/ha/: fencing.rs  mod.rs
horcrux-api/src/kubernetes/: client.rs  config.rs  error.rs  exec.rs  mod.rs  portforward.rs  types.rs  watch.rs
horcrux-api/src/kubernetes/cluster/: health.rs  mod.rs  provisioner.rs
horcrux-api/src/kubernetes/cluster_resources/: mod.rs  namespaces.rs  nodes.rs  quotas.rs  rbac.rs
horcrux-api/src/kubernetes/config_storage/: configmaps.rs  mod.rs  pvcs.rs  secrets.rs  storageclasses.rs
horcrux-api/src/kubernetes/helm/: mod.rs  releases.rs  repos.rs
horcrux-api/src/kubernetes/networking/: ingress.rs  mod.rs  network_policies.rs  services.rs
horcrux-api/src/kubernetes/observability/: events.rs  logs.rs  metrics.rs  mod.rs
horcrux-api/src/kubernetes/workloads/: daemonsets.rs  deployments.rs  jobs.rs  mod.rs  pods.rs  statefulsets.rs
horcrux-api/src/metrics/: container.rs  libvirt.rs  mod.rs  system.rs
horcrux-api/src/middleware/: auth.rs  cors.rs  groups.rs  mod.rs  rate_limit.rs  rbac.rs
horcrux-api/src/migration/: block_migration.rs  health_check.rs  mod.rs  qemu_monitor.rs  rollback.rs
horcrux-api/src/monitoring/: advanced_metrics.rs  mod.rs
horcrux-api/src/nas/: mod.rs  scheduler.rs
horcrux-api/src/nas/auth/: acl.rs  active_directory.rs  kerberos.rs  ldap.rs  ldap_server.rs  mod.rs
horcrux-api/src/nas/monitoring/: health.rs  metrics.rs  mod.rs
horcrux-api/src/nas/services/: iscsi.rs  mod.rs  rsync.rs  s3.rs  timemachine.rs
horcrux-api/src/nas/shares/: afp.rs  ftp.rs  mod.rs  nfs.rs  smb.rs  webdav.rs
horcrux-api/src/nas/storage/: datasets.rs  mod.rs  pools.rs  quotas.rs  replication.rs  snapshots.rs
horcrux-api/src/observability/: config.rs  metrics.rs  mod.rs  prometheus.rs  tracing_export.rs
horcrux-api/src/sdn/: bridge.rs  cni.rs  fabric.rs  ipam.rs  mod.rs  ovs.rs  policy.rs  templates.rs  vlan.rs  vxlan.rs  zones.rs
horcrux-api/src/storage/: btrfs.rs  ceph.rs  cifs.rs  directory.rs  glusterfs.rs  iscsi.rs  lvm.rs  migration.rs  mod.rs  nfs.rs  s3.rs  thin_provision.rs  zfs.rs
horcrux-api/src/template/: mod.rs
horcrux-api/src/tls/: mod.rs  mtls.rs
horcrux-api/src/vm/: clone.rs  clone_progress.rs  cross_node_clone.rs  incus.rs  lxd.rs  mod.rs  qemu.rs  replication.rs  snapshot.rs  snapshot_quota.rs  snapshot_scheduler.rs  vgpu.rs
horcrux-api/tests/: alerts_tests.rs  backup_tests.rs  cluster_tests.rs  integration_tests.rs  migration_tests.rs  oidc_integration_tests.rs  sdn_tests.rs
horcrux-api/tests/common/: mod.rs
horcrux-cli/: Cargo.toml
horcrux-cli/src/: api.rs  config.rs  main.rs  output.rs
horcrux-cli/src/commands/: audit.rs  auth.rs  backup.rs  clone.rs  cluster.rs  container.rs  ha.rs  migrate.rs  mod.rs  monitor.rs  nas.rs  replication.rs  snapshot.rs  storage.rs  user.rs  vm.rs
horcrux-mobile/: Cargo.toml  README.md  index.html  style.css
horcrux-mobile/src/: api.rs  lib.rs  router.rs
horcrux-mobile/src/components/: card.rs  header.rs  loading.rs  mod.rs  pull_to_refresh.rs  status_badge.rs  swipe_action.rs
horcrux-mobile/src/pages/: backup_schedule.rs  cluster.rs  dashboard.rs  login.rs  mod.rs  network.rs  settings.rs  storage.rs  user_management.rs  vms.rs
horcrux-ui/: Cargo.toml  index.html  style.css
horcrux-ui/src/: error.rs  lib.rs  websocket.rs
terraform-provider-horcrux/: Cargo.toml
terraform-provider-horcrux/src/: client.rs  main.rs  provider.rs  resources.rs  schema.rs
(+146 files in other folders)
