[workspace]
resolver = "2"
members = [
    "horcrux-api",
    "horcrux-api/horcrux-ui",
    "horcrux-mobile",
    "horcrux-common",
    "horcrux-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Horcrux Contributors"]
license = "GPL-3.0"
repository = "https://github.com/yourusername/horcrux"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
