[package]
name = "horcrux-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "horcrux-api"
path = "src/main.rs"

[dependencies]
horcrux-common = { path = "../horcrux-common" }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Process management
nix = { version = "0.29", features = ["process", "signal"] }

# Authentication
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["std"] }

# Monitoring
hostname = "0.4"
num_cpus = "1.16"

# HTTP client (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
urlencoding = "2.1"
async-trait = "0.1"
rand = "0.8"
tempfile = "3.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

[features]
default = ["qemu", "lxc", "docker"]

# Virtualization backends
qemu = []        # QEMU/KVM support
lxd = []         # LXD support (VMs and containers)
incus = []       # Incus support (VMs and containers)

# Container runtimes
lxc = []         # LXC containers
docker = []      # Docker containers
podman = []      # Podman containers

# Additional features
cluster = []     # Clustering/HA support
backup = []      # Backup and restore
