[package]
name = "horcrux-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "horcrux_api"
path = "src/lib.rs"

[[bin]]
name = "horcrux-api"
path = "src/main.rs"

[dependencies]
horcrux-common = { path = "../horcrux-common" }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
futures = "0.3"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Process management
nix = { version = "0.29", features = ["process", "signal"] }

# Authentication
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["std"] }

# Monitoring
hostname = "0.4"
num_cpus = "1.16"

# Virtualization - libvirt bindings
virt = { version = "0.4", optional = true }

# HTTP client (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
urlencoding = "2.1"
async-trait = "0.1"
rand = "0.8"
tempfile = "3.8"

# Email notifications
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }

# Validation
regex = "1.10"
url = "2.5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Security - constant-time comparison
subtle = "2.5"

# Encryption
aes-gcm = "0.10"
hex = "0.4"

# Docker API client
bollard = "0.17"

# Kubernetes client
kube = { version = "0.98", features = ["runtime", "derive", "ws"], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_32"], optional = true }
http = { version = "1.0", optional = true }

[features]
default = ["qemu", "lxc", "docker"]

# Virtualization backends
qemu = ["virt"]  # QEMU/KVM support with libvirt
lxd = []         # LXD support (VMs and containers)
incus = []       # Incus support (VMs and containers)

# Container runtimes
lxc = []         # LXC containers
docker = []      # Docker containers
podman = []      # Podman containers

# Additional features
cluster = []     # Clustering/HA support
backup = []      # Backup and restore

# Kubernetes orchestration
kubernetes = ["kube", "k8s-openapi", "http"]

# === NAS Features ===
# Core NAS functionality
nas = []                    # Core NAS module (shares, users, groups)

# File sharing protocols
smb = ["nas"]               # SMB/Samba file sharing (Windows/cross-platform)
nfs-server = ["nas"]        # NFS server for Unix/Linux exports
afp = ["nas"]               # AFP/Netatalk for macOS file sharing
webdav = ["nas"]            # WebDAV file access over HTTP/HTTPS
ftp = ["nas"]               # FTP and SFTP server support

# NAS Authentication backends
nas-auth = ["nas"]          # Core NAS authentication module
ldap = ["nas-auth"]         # LDAP client integration
ldap-server = ["nas-auth"]  # LDAP server (OpenLDAP slapd)
kerberos = ["nas-auth"]     # Kerberos (MIT krb5) authentication
ad = ["nas-auth", "kerberos"]  # Active Directory domain integration

# NAS Services
timemachine = ["afp"]       # macOS Time Machine backup target
s3-gateway = ["nas"]        # S3-compatible API gateway (MinIO)
iscsi-target = ["nas"]      # iSCSI target for block storage
rsync-server = ["nas"]      # Rsync daemon for efficient backups

# NAS Storage backends (runtime dependencies)
nas-zfs = ["nas"]           # ZFS pool/dataset optimizations for NAS
nas-btrfs = ["nas"]         # Btrfs subvolume/RAID support for NAS
nas-mdraid = ["nas"]        # Linux software RAID (mdadm)
nas-lvm = ["nas"]           # LVM thin provisioning for NAS

# NAS Feature bundles for convenience
nas-full = [
    "smb", "nfs-server", "afp", "webdav", "ftp",
    "nas-auth", "ldap", "ldap-server", "kerberos", "ad",
    "timemachine", "s3-gateway", "iscsi-target", "rsync-server",
    "nas-zfs", "nas-btrfs", "nas-mdraid", "nas-lvm"
]
nas-basic = ["smb", "nfs-server", "nas-auth"]
nas-apple = ["smb", "afp", "timemachine"]
nas-enterprise = ["smb", "nfs-server", "nas-auth", "ldap", "ad", "iscsi-target"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "performance"
harness = false
