[package]
name = "horcrux-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
tabled = "0.17"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
chrono = "0.4"
horcrux-common = { path = "../horcrux-common" }

[[bin]]
name = "horcrux"
path = "src/main.rs"
