[package]
name = "horcrux-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "TouchEvent",
    "TouchList",
    "Touch",
] }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = "0.5"
gloo-storage = "0.3"
gloo-timers = "0.3"

horcrux-common = { path = "../horcrux-common" }

[lib]
crate-type = ["cdylib", "rlib"]
