[package]
name = "terraform-provider-horcrux"
version = "0.1.0"
edition = "2021"
description = "Terraform provider for Horcrux virtualization platform"
license = "GPL-3.0"
authors = ["Horcrux Contributors"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }

[[bin]]
name = "terraform-provider-horcrux"
path = "src/main.rs"
