[package]
name = "horcrux-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwasm = "0.5"
chrono = { version = "0.4", features = ["wasmbind"] }
horcrux-common = { path = "../../horcrux-common" }
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType", "Navigator", "Clipboard", "Window"] }
js-sys = "0.3"
base64 = "0.22"
gloo-timers = { version = "0.3", features = ["futures"] }
uuid = { version = "1.0", features = ["v4", "js"] }
urlencoding = "2.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
